istio/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: kube-system
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: k8s.bb-app.cn
    http:
      paths:
      - path: /prometheus
        backend:
          serviceName: prometheus
          servicePort: http-prometheus
  tls:
  - secretName: k8s.bb-app.cn-tls
    hosts:
    - k8s.bb-app.cn
